- remove not use file  - update DataSource  - fix layout