@@ -4,6 +4,7 @@ grails.project.test.class.dir = "target/test-classes"
 grails.project.test.reports.dir = "target/test-reports"
 grails.project.target.level = 1.7
 grails.project.source.level = 1.7
+grails.tomcat.jvmArgs = ["-Xmx1G", "-XX:MaxPermSize=256m"]
 
 grails.project.dependency.resolution = {
 
